--- a/index.html
+++ b/index.html
@@ -2,10 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=  , initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <section>
+<header>
+<nav>
+
+    <div>
+<ul>
+    <li><a href="#"> Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
+</ul>
+
+</div>
+
+<h1>Landing</h1>
+
+<div>
+    <button> Buy Now</button>
+</div>
+
+</nav>
+</header>
+</section>
+
+
+
 </body>
 </html>
