--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta name="viewport" content="width=  , initial-scale=1.0">
     <title>Document</title>
 </head>
+
+<style>
+ul{
+    display: flex;
+}
+.nav{
+    display: flex;
+}
+
+</style>
 <body>
     <section>
 <header>
-<nav>
+<nav class="nav">
 
     <div>
 <ul>
