--- a/index.html
+++ b/index.html
@@ -8,10 +8,26 @@
 
 <style>
 ul{
+
     display: flex;
+    gap : 50px;
 }
 .nav{
     display: flex;
+    gap : 260px;
+}
+.Landing-Text{
+text-align: center;
+    justify-content: center;
+    margin-left: 20px;
+}
+.list-nav{
+    margin-left: 40px;
+}
+.button1{
+    text-align: right;
+    margin-top: 20px;
+    margin-left: 70px;
 }
 
 </style>
@@ -20,7 +36,7 @@ ul{
 <header>
 <nav class="nav">
 
-    <div>
+    <div class="list-nav">
 <ul>
     <li><a href="#"> Home</a></li>
     <li><a href="#">About</a></li>
@@ -28,10 +44,11 @@ ul{
 </ul>
 
 </div>
-
+<div class="Landing-Text">
 <h1>Landing</h1>
+</div>
 
-<div>
+<div class="button1">
     <button> Buy Now</button>
 </div>
 
