--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@ text-align: center;
     margin-top: 20px;
     margin-left: 70px;
 }
-
+button{
+    background-color:  #111B47;
+    
+    color: white;
+    width: 100px;
+    text-decoration: none;
+    box-shadow: none;
+}
 </style>
 <body>
     <section>
