--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=  , initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Varela+Round&family=Zain:wght@200;300;400;700;800;900&display=swap" rel="stylesheet">
 </head>
 
 <style>
+    *{
+        font-family:Roboto ;
+    }
 ul{
 
     display: flex;
@@ -20,6 +26,9 @@ ul{
 text-align: center;
     justify-content: center;
     margin-left: 20px;
+    height: 38px;
+    width: 79px;
+    color: #37447E;
 }
 .list-nav{
     margin-left: 40px;
@@ -33,9 +42,25 @@ button{
     background-color:  #111B47;
     
     color: white;
-    width: 100px;
+    width: 160px;
+    height: 26px;
     text-decoration: none;
     box-shadow: none;
+    border: none;
+    border-radius: 2px;
+}
+button label{
+    width: 160px;
+height: 18px;
+top: 4px;
+gap: 0px;
+opacity: 0px;
+
+}
+li{
+    text-decoration: none;
+list-style: none;
+
 }
 </style>
 <body>
