--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         font-family:Roboto ;
     }
 ul{
-
     display: flex;
     gap : 50px;
+    color: #505F98;
 }
 .nav{
     display: flex;
@@ -29,6 +29,7 @@ text-align: center;
     height: 38px;
     width: 79px;
     color: #37447E;
+    
 }
 .list-nav{
     margin-left: 40px;
@@ -60,8 +61,14 @@ opacity: 0px;
 li{
     text-decoration: none;
 list-style: none;
-
+color: #505F98;
 }
+
+a{
+    text-decoration: none;
+    color:#505F98;
+}
+
 </style>
 <body>
     <section>
