--- a/index.html
+++ b/index.html
@@ -8,68 +8,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Varela+Round&family=Zain:wght@200;300;400;700;800;900&display=swap" rel="stylesheet">
 </head>
-
-<style>
-    *{
-        font-family:Roboto ;
-    }
-ul{
-    display: flex;
-    gap : 50px;
-    color: #505F98;
-}
-.nav{
-    display: flex;
-    gap : 260px;
-}
-.Landing-Text{
-text-align: center;
-    justify-content: center;
-    margin-left: 20px;
-    height: 38px;
-    width: 79px;
-    color: #37447E;
+<link rel="stylesheet" href="css/style.css">
     
-}
-.list-nav{
-    margin-left: 40px;
-}
-.button1{
-    text-align: right;
-    margin-top: 20px;
-    margin-left: 70px;
-}
-button{
-    background-color:  #111B47;
-    
-    color: white;
-    width: 160px;
-    height: 26px;
-    text-decoration: none;
-    box-shadow: none;
-    border: none;
-    border-radius: 2px;
-}
-button label{
-    width: 160px;
-height: 18px;
-top: 4px;
-gap: 0px;
-opacity: 0px;
-
-}
-li{
-    text-decoration: none;
-list-style: none;
-color: #505F98;
-}
-
-a{
-    text-decoration: none;
-    color:#505F98;
-}
-
-</style>
 <body>
     <section>
 <header>
@@ -88,14 +28,12 @@ a{
 </div>
 
 <div class="button1">
-    <button> Buy Now</button>
+    <button>Buy Me</button>
 </div>
 
 </nav>
 </header>
 </section>
-
-
 
 </body>
 </html>
