info text commit

--- a/index.html
+++ b/index.html
@@ -7,19 +7,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Varela+Round&family=Zain:wght@200;300;400;700;800;900&display=swap" rel="stylesheet">
-</head>
 <link rel="stylesheet" href="css/style.css">
-   <body>
+</head>
+<body>
     <style>
         body {
-            background-image: url(res/gear\ illustration.jpg);
-            background-repeat: no-repeat;
-            background-position: right bottom;
-            background-size: 50%; /* adjust this value to fit your image size */
-            background-attachment: fixed;
+    background-image: url(res/gear\ illustration.jpg);
+    background-repeat: no-repeat;
+    background-position: right bottom;
+    background-size: 55.8%; 
+    
+        }
+        .info-area{
+            margin-top: 140px;
+            margin-left: 120px;
+        }
+
+        #introH1{
+            font-weight: 500;
+            font-size: 50px;
+        }
+        p{
+            font-size: 14px;
+            color: #505F98;
         }
     </style>
-    <section>
+   <section>
+
 <header>
 <nav class="nav">
 
@@ -36,11 +50,40 @@
 </div>
 
 <div class="button1">
-    <button>Buy Me</button>
+    <button>Buy Now</button>
 </div>
 
 </nav>
 </header>
+
+
+
+
+<div class="info-area">
+
+
+<h1 id="introH1">Introduce Your Product <br>
+ Quickly & Effectively</h1>
+<div>
+
+
+ <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non, amet. <br>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, vitae. <br>
+ Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae. <br>
+ Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos, neque?</p>
+ 
+
+</div>
+<div>
+
+
+<button id="Purchase">Purchase UI kit</button>
+<button id="Learn"> Learn More</button>
+
+
+</div>
+
+</div>
 </section>
 
 </body>
