info text 2 commit

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
             font-size: 14px;
             color: #505F98;
         }
+        #Purchase{
+            background-color: #111B47;
+            color: white;
+        }
+        #Learn{
+            background-color: white;
+            border-color: black;
+            border: 2px solid;
+            color: #091133;
+        }
     </style>
    <section>
 
